--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
         "stdint.h": "c",
         "nm_bsp_samd21.h": "c",
         "secret.h": "c"
-    }
+    },
+    "cSpell.words": [
+        "microcontroller"
+    ]
 }
